# kademos

./: .gitignore  ADOPTERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  evidence.example.yml  pyproject.toml  requirements-dev.txt
.circleci/: config.yml
.github/: FUNDING.yml  SECURITY.md
.github/workflows/: ci.yml  json-validate.yml  markdown-lint.yml
00-Documentation-Standards/: Level-Definitions.md  Using-Functional-Requirements.md
00-Documentation-Standards/Decision-Templates/: V11-Cryptography-Strategy.md  V14-Data-Classification.md  V16-Security-Logging-Strategy.md  V6-Authentication-Strategy.md  V7-Session-Management.md  V8-Authorization-Rules.md
01-ASVS-Core-Reference/Functional-Requirements/: ASVS-Functional-Requirements-L1.json  ASVS-Functional-Requirements-L2.json  ASVS-Functional-Requirements-L3.json
02-Implementation-Guidance/Patterns/: Anti-CSRF-Implementation.md  Input-Validation.md  Secure-Access-Control-IDOR.md  Secure-File-Uploads.md  Security-Logging-and-Monitoring.md
02-Implementation-Guidance/Verification-Tests/: V3.5.1-CSRF-Test-Examples.md
docs/: troubleshooting.md  user-guide.md
policies/: data.json  validate_docs.rego  validate_docs_test.rego
tests/: __init__.py  conftest.py  test_capability_scanner.py  test_cli.py  test_compliance_gate.py  test_config.py  test_export_requirements.py  test_paths.py  test_verification_suite.py
tools/: __init__.py  __main__.py  capability_scanner.py  cli.py  compliance_gate.py  config.py  export_requirements.py  paths.py  verification_suite.py
(+17 files in other folders)
